[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/HUD/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/HUD/pontos.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/municao.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/vidas.png" type="Texture" id=4]
[ext_resource path="res://screens/HUD.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Municao" type="TextureRect" parent="."]
margin_left = 368.937
margin_top = 12.1989
margin_right = 418.937
margin_bottom = 62.1989
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lblMunicao" type="Label" parent="Municao"]
margin_left = 57.0
margin_top = 1.0
margin_right = 92.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "000"
valign = 1

[node name="Pontos" type="TextureRect" parent="."]
margin_left = 192.006
margin_top = 10.822
margin_right = 242.006
margin_bottom = 60.822
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lblPontos" type="Label" parent="Pontos"]
margin_left = 58.0
margin_top = 1.0
margin_right = 96.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "000"
valign = 1

[node name="Vidas" type="TextureRect" parent="."]
margin_left = 12.7156
margin_top = 10.2227
margin_right = 62.7156
margin_bottom = 60.2227
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lblVidas" type="Label" parent="Vidas"]
margin_left = 57.0
margin_top = 1.0
margin_right = 92.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "000"
valign = 1

[node name="lblPerdeu" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -32.0
margin_right = 205.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Perdeu playboy!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
